--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,1 @@
-@import "~taro-ui/dist/style/components/tab-bar.scss";
-@import "~taro-ui/dist/style/components/badge.scss";
-@import "~taro-ui/dist/style/components/icon.scss";
+@import "./custom-theme.scss";
