--- a/src/app.scss
+++ b/src/app.scss
@@ -1,1 +1,8 @@
 @import "./custom-theme.scss";
+
+:root {
+  --color-black: #333333;
+  --color-green: #e7fcf8;
+  --color-white: #f7f7f7;
+  --color-gray: #cccccc;
+}
